# hse-cv-course-2017

./: README.md
1. Emotion Recognition/: README.md
1. Emotion Recognition/preprocessor/: chain.py  facedetector.py
1. Emotion Recognition/recognizer/: emotionrecognizer.py
1. Emotion Recognition/starter/: configresolver.py  flowexecutor.py  run.py
1. Emotion Recognition/starter/resources/: config.ini
2. Panorama Stitching/: README.md  panorama_stitching.py
3. Image Classification/: README.md
3. Image Classification/HSEOpenCVProject/: HSEOpenCVProject.sln
4. Face Recognition/: .gitignore  CMakeLists.txt  README.md
4. Face Recognition/dnn/HSEOpenCVProject/: ImageClassification.cpp  ImageClassification.h  main.cpp
4. Face Recognition/dnn/HSEOpenCVProject/Debug/: vc141.idb
4. Face Recognition/dnn/HSEOpenCVProject/Debug/HSEOpenCVProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HSEOpenCVProject.lastbuildstate
4. Face Recognition/dnn/HSEOpenCVProject/x64/Debug/: vc141.idb
4. Face Recognition/dnn/HSEOpenCVProject/x64/Debug/HSEOpenCVProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HSEOpenCVProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
4. Face Recognition/dnn/x64/Debug/: HSEOpenCVProject.ilk
4. Face Recognition/src/: CMakeLists.txt  dataset.cpp  dataset.h  dataset_manager.cpp  dataset_manager.h  face_detector.cpp  face_detector.h  face_recognizer.cpp  face_recognizer.h  main.cpp  webcam_ui.cpp  webcam_ui.h
4. Face Recognition/src/util/: argparser.cpp  argparser.h  fsutil.cpp  fsutil.h  log.cpp  log.h
4. Face Recognition/tensorflow/app/: build.gradle
4. Face Recognition/tensorflow/app/src/main/: AndroidManifest.xml
4. Face Recognition/tensorflow/app/src/main/java/com/example/imageclassifier/: CameraHandler.java  ImagePreprocessor.java  MainActivity.java  NonNull.java
4. Face Recognition/tensorflow/app/src/main/java/com/example/imageclassifier/classifier/: Classifier.java  TensorFlowImageClassifier.java
4. Face Recognition/tensorflow/app/src/main/java/com/example/imageclassifier/env/: ImageUtils.java  Logger.java
4. Face Recognition/tensorflow/app/src/main/res/layout/: activity_camera.xml
4. Face Recognition/tensorflow/app/src/main/res/values/: strings.xml
5. Coin Counting/: README.md  cascade.xml  classificator.pkl  classificator_new.pkl  classifier.pkl  coin_counting.py  config.ini  main.py  main_new.py  resize_images.py  test.py  train_classifier.py  train_img_0.26_x.pkl  train_img_0.26_y.pkl
5. Coin Counting/hse_cv/: config.py
6. Template Matching/: README.md  anotherCluster.py  cluster.py  drawMatches.py  kek.py  main.py  matching.py  template_matching.py  utils.py
(+20 files in other folders)
